--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="dropdown">
-        <input type="text" class="dropdown-text" placeholder="انتخاب کنید...">
+        <input type="text" class="dropdown-text" placeholder="انتخاب کنید..." readonly>
+        <div class="option">
+            <div>طراحی سایت</div>
+            <div>برنامه نویسی موبایل</div>
+            <div>هوش مصنوعی</div>
+            <div>فرانت</div>
+        </div>
     </div>
 
     <script src="script.js" type="text/javascript"></script>
