--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="dropdown">
         <input type="text" class="dropdown-text" placeholder="انتخاب کنید..." readonly>
         <div class="option">
-            <div>طراحی سایت</div>
-            <div>برنامه نویسی موبایل</div>
-            <div>هوش مصنوعی</div>
-            <div>فرانت</div>
+            <div onmousedown="show('طراحی سایت')">طراحی سایت</div>
+            <div onmousedown="show('برنامه نویسی موبایل')">برنامه نویسی موبایل</div>
+            <div onmousedown="show('هوش مصنوعی')">هوش مصنوعی</div>
+            <div onmousedown="show('فرانت')">فرانت</div>
         </div>
     </div>
 
